# line-viewer

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
assets/: line-view.desktop
line-view/: Cargo.toml
line-view/src/: cmd.rs  import.rs  lib.rs  line_view.rs  provide.rs
line-view/src/line_view/: directive.rs  directive_reader.rs  import.rs  source.rs  source_action.rs
line-viewer-cli/: Cargo.toml
line-viewer-cli/src/: main.rs
line-viewer-slint/: Cargo.toml  build.rs
line-viewer-slint/src/: main.rs
sample/: a.txtlv  b.txtlv  clean.txtlv  composite-ab.txtlv  env.txtlv  escape.txtlv  ignore.txtlv  invalid.txtlv  lines.txtlv  with-title.txtlv
src/: error.rs  extensions.rs  fwidget.rs  history.rs  lib.rs  line_view.rs  main.rs  message.rs  path_ext.rs  state.rs
src/line_view/: cmd.rs  directive.rs  directive_reader.rs  directive_source.rs  file_reader.rs  handle.rs  import.rs  include.rs  line.rs  line_map.rs  line_read.rs  source.rs  source_action.rs
ui/: appwindow.slint
