[package]
name = "line-view"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "0.5.9"
rustc-hash = "1.1.0"
tap = "1.0.1"
thiserror = "1.0.56"

[lints.rust]
let_underscore = "warn"
future_incompatible = "warn"
nonstandard_style = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"
